--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -12,4 +12,8 @@
         android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/Settings"
         android:showAsAction="never"/>
+    <item android:id="@+id/reload"
+        android:icon="@drawable/ic_action_refresh"
+        android:title="@string/Refresh"
+        android:showAsAction="never"/>
 </menu>
