--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -34,4 +34,23 @@
         <item>0</item>
         <item>1</item>
     </string-array>
+    <string-array name="scaleFontSize">
+        <item>0.3</item>
+        <item>0.4</item>
+        <item>0.5</item>
+        <item>0.6</item>
+        <item>0.7</item>
+        <item>0.8</item>
+        <item>0.9</item>
+        <item>1.0</item>
+        <item>1.1</item>
+        <item>1.2</item>
+        <item>1.3</item>
+        <item>1.5</item>
+        <item>2.0</item>
+        <item>2.5</item>
+        <item>3.0</item>
+        <item>4.0</item>
+        <item>5.0</item>
+    </string-array>
 </resources>
