--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -36,6 +36,13 @@
             android:defaultValue="1.0"
             android:persistent="true"/>
     </PreferenceCategory>
+    <PreferenceCategory android:title="Camera capture">
+        <CheckBoxPreference
+            android:key="useTempFileForCapture"
+            android:title="Capture into temp file (bugfix)"
+            android:defaultValue="false"
+            android:persistent="true"/>
+    </PreferenceCategory>
 <!--
     <PreferenceCategory android:title="@string/Appearance">
         <ListPreference
