--- a/res/layout/listitem_juickmessage.xml
+++ b/res/layout/listitem_juickmessage.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="5dip">
 <!--
     <ImageView
@@ -19,4 +20,13 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="top"/>
+
+    <com.juick.android.WebViewGallery
+            android:id="@+id/gallery"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:spacing="20sp"
+            >
+
+    </com.juick.android.WebViewGallery>
 </LinearLayout>
