--- a/res/layout/incoming_messages_threads.xml
+++ b/res/layout/incoming_messages_threads.xml
@@ -16,8 +16,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"
-        android:textSize="10sp"
         android:ellipsize="end"
+        android:textColor="#808080"
         android:text="> Morraz will prevail! forever and ever and ever and ever and ever and ever and ever and ever"
         />
     <TextView
