--- a/res/menu/settings.xml
+++ b/res/menu/settings.xml
@@ -4,8 +4,8 @@
     <item android:id="@+id/menuitem_filters"
         android:title="@string/Filters"
         android:showAsAction="never"/>
-    <item android:id="@+id/menuitem_xmpp_settings"
-        android:title="XMPP setup"
+    <item android:id="@+id/menuitem_xmpp_control"
+        android:title="XMPP control"
         android:showAsAction="never"/>
 
 </menu>
