--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -4,7 +4,7 @@
         <item>Подписки</item>
         <item>Все сообщения</item>
         <item>Популярные</item>
-        <item>С фотографиями</item>
+        <item>С фото</item>
     </string-array>
     <string-array name="prefsRefreshIntervalTitles">
         <item>Никогда</item>
