error reporting and misc stuff

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -68,12 +68,12 @@
         <item>fastunweserv</item>
     </string-array>
     <string-array name="imageHeight">
-        <item>20%</item>
-        <item>30%</item>
-        <item>40%</item>
-        <item>50%</item>
-        <item>60%</item>
-        <item>70%</item>
+        <item>20 percent</item>
+        <item>30 percent </item>
+        <item>40 percent</item>
+        <item>50 percent</item>
+        <item>60 percent</item>
+        <item>70 percent</item>
     </string-array>
     <string-array name="imageHeightValues">
         <item>0.2</item>
