--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -5,6 +5,7 @@
         <item>Last messages</item>
         <item>Top messages</item>
         <item>With photos</item>
+        <item>My blog</item>
     </string-array>
     <string-array name="prefsRefreshIntervalTitles">
         <item>Never</item>
