--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -59,6 +59,11 @@
             android:summary="..when replying "
             android:defaultValue="false"
             android:persistent="true"/>
+        <EditTextPreference
+            android:key="myUserId"
+            android:title="User ID for 'My Blog'"
+            android:summary="Leave it empty if unknown"
+            android:persistent="true"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="Camera capture">
         <CheckBoxPreference
