--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -84,4 +84,14 @@
         <item>0.6</item>
         <item>0.7</item>
     </string-array>
+    <string-array name="xmppTemplate">
+        <item>No preset</item>
+        <item>Usual jabber server</item>
+        <item>Google Talk</item>
+    </string-array>
+    <string-array name="xmppTemplateValues">
+        <item>nothing</item>
+        <item>jabber</item>
+        <item>gtalk</item>
+    </string-array>
 </resources>
