--- a/res/layout/xmpp_setup.xml
+++ b/res/layout/xmpp_setup.xml
@@ -85,21 +85,63 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="5sp"
                 android:gravity="right"
-                android:text="Resource:"/>
+                android:paddingRight="5sp"
+                android:text="Server:"/>
         <EditText
-                android:id="@+id/resource"
-                android:text="com.juickadvanced"
+                android:id="@+id/server"
+                android:text="jabber.ru"
                 android:minWidth="150dip"
                 android:layout_width="wrap_content"
-                android:textSize="20dp"
                 android:paddingRight="10dp"
                 android:paddingLeft="10dp"
                 android:paddingTop="0dp"
                 android:paddingBottom="0dp"
+                android:textSize="20dp"
                 android:layout_height="32dp"
                 />
+    </TableRow>
+    <TableRow>
+        <TextView
+                android:layout_width="wrap_content"
+                android:paddingRight="5sp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="Port:"/>
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+            <EditText
+                    android:id="@+id/port"
+                    android:text="5222"
+                    android:inputType="numberDecimal"
+                    android:layout_width="wrap_content"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp"
+                    android:textSize="20dp"
+                    android:layout_height="32dp"
+                    />
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:paddingRight="5sp"
+                    android:paddingLeft="15sp"
+                    android:text="Secure:"/>
+            <CheckBox
+                    android:id="@+id/secure"
+                    android:layout_width="wrap_content"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp"
+                    android:textSize="20dp"
+                    android:layout_height="32dp"
+                    />
+        </LinearLayout>
     </TableRow>
     <TableRow>
         <TextView
@@ -126,58 +168,19 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="right"
                 android:paddingRight="5sp"
-                android:text="Server:"/>
+                android:gravity="right"
+                android:text="Resource:"/>
         <EditText
-                android:id="@+id/server"
-                android:text="jabber.ru"
+                android:id="@+id/resource"
+                android:text="com.juickadvanced"
                 android:minWidth="150dip"
                 android:layout_width="wrap_content"
+                android:textSize="20dp"
                 android:paddingRight="10dp"
                 android:paddingLeft="10dp"
                 android:paddingTop="0dp"
                 android:paddingBottom="0dp"
-                android:textSize="20dp"
-                android:layout_height="32dp"
-                />
-    </TableRow>
-    <TableRow>
-        <TextView
-                android:layout_width="wrap_content"
-                android:paddingRight="5sp"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:text="Port:"/>
-        <EditText
-                android:id="@+id/port"
-                android:text="5222"
-                android:minWidth="50dip"
-                android:inputType="numberDecimal"
-                android:layout_width="wrap_content"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp"
-                android:textSize="20dp"
-                android:layout_height="32dp"
-                />
-    </TableRow>
-    <TableRow>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:paddingRight="5sp"
-                android:text="Secure:"/>
-        <CheckBox
-                android:id="@+id/secure"
-                android:layout_width="wrap_content"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp"
-                android:textSize="20dp"
                 android:layout_height="32dp"
                 />
     </TableRow>
