--- a/res/layout/fragment_view.xml
+++ b/res/layout/fragment_view.xml
@@ -10,6 +10,7 @@
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="invisible"
+               android:fadingEdge="none"
                android:drawSelectorOnTop="false"/>
 
     <LinearLayout android:id="@id/android:empty"
