--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -163,47 +163,47 @@
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/Colors">
         <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Color.COMMON_BACKGROUND"
+            android:key="Colors.COMMON_BACKGROUND"
             android:title="Common background"
             android:defaultValue="0xFFFFFFFF"
             android:persistent="true"/>
         <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Color.COMMON_FOREGROUND"
+            android:key="Colors.COMMON_FOREGROUND"
             android:title="Common foreground"
             android:defaultValue="0xFF000000"
             android:persistent="true"/>
         <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Color.USERNAME"
+            android:key="Colors.USERNAME"
             android:title="Usernames"
             android:defaultValue="0xFFC8934E"
             android:persistent="true"/>
         <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Color.TAGS"
+            android:key="Colors.TAGS"
             android:title="Tags"
             android:defaultValue="0xFF0000CC"
             android:persistent="true"/>
         <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Color.URLS"
+            android:key="Colors.URLS"
             android:title="URLs"
             android:defaultValue="0xFF0000CC"
             android:persistent="true"/>
         <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Color.MESSAGE_ID"
+            android:key="Colors.MESSAGE_ID"
             android:title="Message IDs"
             android:defaultValue="0xFFa0a5bd"
             android:persistent="true"/>
         <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Color.NUMBER_OF_COMMENTS"
+            android:key="Colors.NUMBER_OF_COMMENTS"
             android:title="Number of comments"
             android:defaultValue="0xFFC8934E"
             android:persistent="true"/>
         <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Color.TRANSLATED_LABEL"
+            android:key="Colors.TRANSLATED_LABEL"
             android:title="``Translated`` label"
             android:defaultValue="0xFF4ec856"
             android:persistent="true"/>
         <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Color.DATE"
+            android:key="Colors.DATE"
             android:title="Dates"
             android:defaultValue="0xFFAAAAAA"
             android:persistent="true"/>
