--- a/res/layout/xmpp_setup.xml
+++ b/res/layout/xmpp_setup.xml
@@ -1,120 +1,165 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:background="#FFFFFF"
-             android:orientation="vertical">
-    <TableRow android:layout_width="fill_parent"
-            >
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:paddingRight="5sp"
-                android:text="Presets:"/>
-        <Spinner
-                android:id="@+id/template_selection"
-                android:layout_width="fill_parent"
-                android:layout_height="38dp"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp"
-                android:textSize="20dp"
-                android:entries="@array/xmppTemplate"
-                />
-    </TableRow>
-    <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:paddingRight="5sp"
-                android:text="Login:"/>
-        <EditText
-                android:id="@+id/login"
-                android:text="LOGIN!"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp"
-                android:layout_width="wrap_content"
-                android:textSize="20dp"
-                android:layout_height="32dp"
-                />
-    </TableRow>
-    <TableRow android:layout_width="fill_parent">
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingRight="5sp"
-                android:gravity="right"
-                android:text="Password:"/>
-        <EditText
-                android:id="@+id/password"
-                android:minWidth="150dip"
-                android:password="true"
-                android:layout_width="wrap_content"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp"
-                android:textSize="20dp"
-                android:layout_height="32dp"
-                />
-    </TableRow>
-    <TableRow android:layout_width="fill_parent">
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingRight="5sp"
-                android:gravity="right"
-                android:text="Service:"/>
-        <EditText
-                android:id="@+id/service"
-                android:minWidth="150dip"
-                android:layout_width="wrap_content"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp"
-                android:textSize="20dp"
-                android:layout_height="32dp"
-                />
-    </TableRow>
-    <TableRow>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:paddingRight="5sp"
-                android:text="Server:"/>
-        <EditText
-                android:id="@+id/server"
-                android:text="jabber.ru"
-                android:minWidth="150dip"
-                android:layout_width="wrap_content"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp"
-                android:textSize="20dp"
-                android:layout_height="32dp"
-                />
-    </TableRow>
-    <TableRow>
-        <TextView
-                android:layout_width="wrap_content"
-                android:paddingRight="5sp"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:text="Port:"/>
-        <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+                     android:layout_width="fill_parent"
+                     android:layout_height="wrap_content"
+        >
+    <TableLayout
+
+                 android:layout_width="fill_parent"
+                 android:layout_height="wrap_content"
+                 android:background="#FFFFFF"
+                 android:orientation="vertical">
+        <TableRow android:layout_width="fill_parent"
                 >
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:paddingRight="5sp"
+                    android:text="Presets:"/>
+            <Spinner
+                    android:id="@+id/template_selection"
+                    android:layout_width="fill_parent"
+                    android:layout_height="38dp"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp"
+                    android:textSize="20dp"
+                    android:entries="@array/xmppTemplate"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:paddingRight="5sp"
+                    android:text="Login:"/>
             <EditText
-                    android:id="@+id/port"
-                    android:text="5222"
+                    android:id="@+id/login"
+                    android:text="LOGIN!"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp"
+                    android:layout_width="wrap_content"
+                    android:textSize="20dp"
+                    android:layout_height="32dp"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="fill_parent">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="5sp"
+                    android:gravity="right"
+                    android:text="Password:"/>
+            <EditText
+                    android:id="@+id/password"
+                    android:minWidth="150dip"
+                    android:password="true"
+                    android:layout_width="wrap_content"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp"
+                    android:textSize="20dp"
+                    android:layout_height="32dp"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="fill_parent">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="5sp"
+                    android:gravity="right"
+                    android:text="Service:"/>
+            <EditText
+                    android:id="@+id/service"
+                    android:minWidth="150dip"
+                    android:layout_width="wrap_content"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp"
+                    android:textSize="20dp"
+                    android:layout_height="32dp"
+                    />
+        </TableRow>
+        <TableRow>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:paddingRight="5sp"
+                    android:text="Server:"/>
+            <EditText
+                    android:id="@+id/server"
+                    android:text="jabber.ru"
+                    android:minWidth="150dip"
+                    android:layout_width="wrap_content"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp"
+                    android:textSize="20dp"
+                    android:layout_height="32dp"
+                    />
+        </TableRow>
+        <TableRow>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:paddingRight="5sp"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:text="Port:"/>
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+                <EditText
+                        android:id="@+id/port"
+                        android:text="5222"
+                        android:inputType="numberDecimal"
+                        android:layout_width="wrap_content"
+                        android:paddingRight="10dp"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="0dp"
+                        android:paddingBottom="0dp"
+                        android:textSize="20dp"
+                        android:layout_height="32dp"
+                        />
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:paddingRight="5sp"
+                        android:paddingLeft="15sp"
+                        android:text="Secure:"/>
+                <CheckBox
+                        android:id="@+id/secure"
+                        android:layout_width="wrap_content"
+                        android:paddingRight="10dp"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="0dp"
+                        android:paddingBottom="0dp"
+                        android:textSize="20dp"
+                        android:layout_height="32dp"
+                        />
+            </LinearLayout>
+        </TableRow>
+        <TableRow>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:paddingRight="5sp"
+                    android:text="Priority:"/>
+            <EditText
+                    android:id="@+id/priority"
+                    android:text="55"
+                    android:minWidth="50dip"
                     android:inputType="numberDecimal"
                     android:layout_width="wrap_content"
                     android:paddingRight="10dp"
@@ -124,77 +169,39 @@
                     android:textSize="20dp"
                     android:layout_height="32dp"
                     />
+        </TableRow>
+        <TableRow>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="right"
                     android:paddingRight="5sp"
-                    android:paddingLeft="15sp"
-                    android:text="Secure:"/>
-            <CheckBox
-                    android:id="@+id/secure"
+                    android:gravity="right"
+                    android:text="Resource:"/>
+            <EditText
+                    android:id="@+id/resource"
+                    android:text="com.juickadvanced"
+                    android:minWidth="150dip"
                     android:layout_width="wrap_content"
+                    android:textSize="20dp"
                     android:paddingRight="10dp"
                     android:paddingLeft="10dp"
                     android:paddingTop="0dp"
                     android:paddingBottom="0dp"
-                    android:textSize="20dp"
                     android:layout_height="32dp"
                     />
-        </LinearLayout>
-    </TableRow>
-    <TableRow>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:paddingRight="5sp"
-                android:text="Priority:"/>
-        <EditText
-                android:id="@+id/priority"
-                android:text="55"
-                android:minWidth="50dip"
-                android:inputType="numberDecimal"
-                android:layout_width="wrap_content"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp"
-                android:textSize="20dp"
-                android:layout_height="32dp"
-                />
-    </TableRow>
-    <TableRow>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingRight="5sp"
-                android:gravity="right"
-                android:text="Resource:"/>
-        <EditText
-                android:id="@+id/resource"
-                android:text="com.juickadvanced"
-                android:minWidth="150dip"
-                android:layout_width="wrap_content"
-                android:textSize="20dp"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp"
-                android:layout_height="32dp"
-                />
-    </TableRow>
-    <TableRow>
-        <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
-        </LinearLayout>
-        <Button
-                android:id="@+id/test_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20sp"
-                android:text="Test.."/>
-    </TableRow>
-</TableLayout>
+        </TableRow>
+        <TableRow>
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+            </LinearLayout>
+            <Button
+                    android:id="@+id/test_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20sp"
+                    android:text="Test.."/>
+        </TableRow>
+    </TableLayout>
+</ScrollView>
