--- a/res/layout/listitem_juickmessage.xml
+++ b/res/layout/listitem_juickmessage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.juick.android.PressableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -29,4 +29,4 @@
             >
 
     </com.juick.android.WebViewGallery>
-</LinearLayout>
+</com.juick.android.PressableLinearLayout>
