--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -105,11 +105,28 @@
             android:defaultValue="false"
             android:persistent="true"/>
         <CheckBoxPreference
+            android:key="lastReadMessages"
+            android:title="Mark already read messages"
+            android:summary="..without bold nick and crossed out message number"
+            android:defaultValue="false"
+            android:persistent="true"/>
+        <CheckBoxPreference
             android:key="showNumbers"
             android:title="@string/Show_Numbers"
             android:summary="@string/Message_numbers_will_be_shown"
             android:defaultValue="false"
             android:persistent="true"/>
+        <CheckBoxPreference
+                android:key="enableMessageDB"
+                android:title="Enable local storage"
+                android:summary="..for better life"
+                android:defaultValue="false"
+                android:persistent="true"/>
+        <EditTextPreference
+                android:key="messageDBperiod"
+                android:title="Days to keep stored messages"
+                android:defaultValue="30"
+                android:persistent="false"/>
         <CheckBoxPreference
             android:key="confirmActions"
             android:title="@string/Confirm_asctions"
@@ -207,6 +224,11 @@
             android:key="Colors.USERNAME"
             android:title="Usernames"
             android:defaultValue="0xFFC8934E"
+            android:persistent="true"/>
+        <yuku.ambilwarna.widget.AmbilWarnaPreference
+            android:key="Colors.USERNAME_READ"
+            android:title="Usernames (read msgs)"
+            android:defaultValue="0xFFc84e4e"
             android:persistent="true"/>
         <yuku.ambilwarna.widget.AmbilWarnaPreference
             android:key="Colors.TAGS"
