--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -7,6 +7,7 @@
         <item>With photos</item>
         <item>My blog</item>
         <item>Srachiki</item>
+        <item>Last messages - unread</item>
     </string-array>
     <string-array name="prefsRefreshIntervalTitles">
         <item>Never</item>
